# scapix_example_objc

./: .gitignore  README.md
cpplib/: CMakeLists.txt  cmake_generate.sh  cmake_generate_ios.sh
cpplib/source/: contact.cpp  contact.h
objcapp/objcapp/: AppDelegate.h  AppDelegate.m  Info.plist  main.m
objcapp/objcapp.xcodeproj/: project.pbxproj
objcapp/objcapp/Base.lproj/: MainMenu.xib
scapix_example.xcworkspace/: contents.xcworkspacedata
scapix_example.xcworkspace/xcuserdata/boris.xcuserdatad/: UserInterfaceState.xcuserstate
